--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 remote_theme: devich/quick@0.0.1
-bg_color : dark
+bg_color : light
 theme_color: azure
 title: Cult of Amnesia
 description : A poet's diary full of ramblings and art.
